styles/globals.scss
@import "./_sass_modules/main.scss";

* {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

html,
body {
  font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  overflow-x: hidden;
  margin: 0;
  padding: 0;
  background-color: $color_bg_primary;
  -moz-osx-font-smoothing: grayscale !important;
  -webkit-font-smoothing: antialiased !important;
  text-rendering: optimizeLegibility !important;
}

a {
  text-decoration: none;
  color: inherit;
}

strong {
  font-weight: bolder;
}

.section-padding {
  padding: 9.375rem 0;

  @include for-phone-only {
    padding: 4rem 0;
  }
}

header.padding-x {
  @include for-phone-only {
    padding: 0 2rem;
  }
  @include for-tablet-portrait-up {
    padding: 0 3rem;
  }
  @include for-tablet-landscape-up {
    padding: 0 5rem;
  }
}

header .btn-group {
	@include for-phone-only {
		display: none;
	}
}

.padding-x {
  @include for-phone-only {
    padding: 0 2rem;
  }
  @include for-tablet-portrait-up {
    padding: 0 4rem;
  }
  @include for-tablet-landscape-up {
    padding: 0 6rem;
  }
  @include for-desktop-up {
    padding: 0 8rem;
  }
  @include for-big-desktop-up {
    padding: 0 14rem;
  }
}

.active {
  font-weight: 700;
}

.layout-container {
  position: relative;
  width: 100%;
  min-height: 621.25rem;
}

.isDisabled {
  cursor: not-allowed;
  text-decoration: none;
  opacity: 0.5;
}

